--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,56 @@
-.App {
-  text-align: center;
+.box {
+  width: 500px;
+  height: 400px;
+  background: gray;
+  padding: 60px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.flex {
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  border-bottom: 2px solid #fff;
+  padding: 30px;
+}
+
+input {
+  padding: 5px 10px;
+}
+
+select {
+  padding: 6px;
+}
+
+.submit {
+  padding: 30px;
+  border-bottom: 2px solid #fff;
+}
+
+.button {
+  padding: 8px 30px;
+  border: 1px solid black;
+  color: #fff;
+  background: rgb(20, 20, 194);
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.submit-2 {
+  padding: 30px;
+  text-align: right;
+}
+
+.button-2 {
+  padding: 8px 30px;
+  border: 1px solid black;
+  color: #fff;
+  background: #000;
+  border-radius: 4px;
+  cursor: pointer;
+
+}
+
+.hiza {
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  align-items: center;
+  padding-top: 80px;
 }
